hide drop-down documentation link
until 4.1 is closer to complete

--- a/src/md2html/template_page.html
+++ b/src/md2html/template_page.html
@@ -44,6 +44,7 @@
           <a class="btn btn-lg menuButton ms-2 text-light" href="{{baseUrl}}/quickstart" role="button">Quickstart</a>
           <a class="btn btn-lg menuButton ms-2 text-light" href="{{baseUrl}}/cookbook" role="button">Cookbook</a>
 
+          <!-- 4.1 specific documentation
           <div class="dropdown d-inline-block">
             <a class="btn btn-lg menuButton ms-2 text-light dropdown-toggle" role="button" id="dropdownMenuLink"
               data-bs-toggle="dropdown" aria-expanded="false">
@@ -55,6 +56,7 @@
               <li><a class="dropdown-item" href="{{baseUrl}}/faq">FAQ</a></li>
             </ul>
           </div>
+          -->
 
         </nav>
 
