--- a/src/md2html/template_article.html
+++ b/src/md2html/template_article.html
@@ -18,7 +18,7 @@
         <div class="px-3 pb-3 text-muted">
             <small>
                 <a data-bs-toggle="collapse" href="#source-article-{{id}}" role="button" aria-expanded="false"
-                    aria-controls="source-article-{{id}}" style="opacity: 2; color: black;">{{viewSourceMessage}}</a>
+                    aria-controls="source-article-{{id}}" style="opacity: .2; color: black;">{{viewSourceMessage}}</a>
             </small>
         </div>
 
