add documentation dropdown to menu

--- a/src/md2html/page.html
+++ b/src/md2html/page.html
@@ -8,12 +8,13 @@
   <title>{{title}}</title>
   <meta name='description' content='{{description}}' />
   <link rel="shortcut icon" href="https://swharden.com/scottplot/scottplot.ico" />
-  
+
   <link href="https://swharden.com/md2html-resources/bootstrap/5.0.0-beta1/bootstrap.min.css" rel="stylesheet" />
   <link href="https://swharden.com/md2html-resources/bootstrap/5.0.0-beta1/tweaks.css" rel="stylesheet" />
   <link href="https://swharden.com/md2html-resources/md2html.css" rel="stylesheet" />
-  
-  <script async defer src="https://swharden.com/md2html-resources/bootstrap/5.0.0-beta1/bootstrap.bundle.min.js"></script>
+
+  <script async defer
+    src="https://swharden.com/md2html-resources/bootstrap/5.0.0-beta1/bootstrap.bundle.min.js"></script>
   <script async defer src="https://swharden.com/md2html-resources/prettify.js"></script>
   <script async defer src="https://buttons.github.io/buttons.js"></script>
 
@@ -30,24 +31,29 @@
       <div class="col mb-5">
 
         <nav class="text-end p-2">
-          <a class="btn btn-lg menuButton ms-2 text-light" href="https://swharden.com/scottplot/" role="button">Home</a>
-          <a class="btn btn-lg menuButton ms-2 text-light" href="https://swharden.com/scottplot/demo" role="button">Demo</a>
-          <a class="btn btn-lg menuButton ms-2 text-light" href="https://swharden.com/scottplot/quickstart" role="button">Quickstart</a>
-          <a class="btn btn-lg menuButton ms-2 text-light" href="https://swharden.com/scottplot/cookbook" role="button">Cookbook</a>
 
-          <!-- 4.1 specific documentation
+          <a class="btn btn-lg menuButton ms-2 text-light" role="button" href="https://swharden.com/scottplot/">Home</a>
+
+          <a class="btn btn-lg menuButton ms-2 text-light" role="button"
+            href="https://swharden.com/scottplot/demo">Demo</a>
+
+          <a class="btn btn-lg menuButton ms-2 text-light" role="button"
+            href="https://swharden.com/scottplot/cookbook">Cookbook</a>
+
           <div class="dropdown d-inline-block">
             <a class="btn btn-lg menuButton ms-2 text-light dropdown-toggle" role="button" id="dropdownMenuLink"
               data-bs-toggle="dropdown" aria-expanded="false">
               Documentation
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li><a class="dropdown-item" href="https://swharden.com/scottplot/quickstart/">Quickstart</a></li>
+              <!-- documentation specific to version 4.1
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/overview">Overview</a></li>
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/demo">Examples</a></li>
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/faq">FAQ</a></li>
+              -->
             </ul>
           </div>
-          -->
 
         </nav>
 
@@ -56,8 +62,8 @@
             <a href="https://swharden.com/scottplot/" style="color: inherit;">ScottPlot</a>
           </div>
           <div class="fs-6" style="opacity: 50%;">Interactive Plotting Library for .NET</div>
-		  
-		  <!-- GitHub Star Button -->
+
+          <!-- GitHub Star Button -->
           <div class="text-end" style="height: 0px; position: relative; top: -30px;">
             <a class="github-button" href="https://github.com/scottplot/scottplot" data-size="large"
               data-show-count="true" aria-label="Stars" data-text="Stars"></a>
