move demo into documentation menu

--- a/src/md2html/page.html
+++ b/src/md2html/page.html
@@ -35,9 +35,6 @@
           <a class="btn btn-lg menuButton ms-2 text-light" role="button" href="https://swharden.com/scottplot/">Home</a>
 
           <a class="btn btn-lg menuButton ms-2 text-light" role="button"
-            href="https://swharden.com/scottplot/demo">Demo</a>
-
-          <a class="btn btn-lg menuButton ms-2 text-light" role="button"
             href="https://swharden.com/scottplot/cookbook">Cookbook</a>
 
           <div class="dropdown d-inline-block">
@@ -49,6 +46,8 @@
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/quickstart/">Quickstart</a></li>
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/overview">Overview</a></li>
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/faq">FAQ</a></li>
+              <li><a class="dropdown-item" href="https://swharden.com/scottplot/demo">Demo</a></li>
+              <li><a class="dropdown-item" href="https://github.com/scottplot">GitHub</a></li>
             </ul>
           </div>
 
