remove overview from documentation menu

--- a/src/md2html/page.html
+++ b/src/md2html/page.html
@@ -44,9 +44,9 @@
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/quickstart/">Quickstart</a></li>
-              <li><a class="dropdown-item" href="https://swharden.com/scottplot/overview">Overview</a></li>
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/faq">FAQ</a></li>
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/demo">Demo</a></li>
+              <li><a class="dropdown-item" href="https://swharden.com/scottplot/demo">Cookbook</a></li>
               <li><a class="dropdown-item" href="https://github.com/scottplot">GitHub</a></li>
             </ul>
           </div>
