--- a/src/md2html/page.html
+++ b/src/md2html/page.html
@@ -46,7 +46,7 @@
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/quickstart/">Quickstart</a></li>
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/faq">FAQ</a></li>
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/demo">Demo</a></li>
-              <li><a class="dropdown-item" href="https://swharden.com/scottplot/demo">Cookbook</a></li>
+              <li><a class="dropdown-item" href="https://swharden.com/scottplot/cookbook">Cookbook/API</a></li>
               <li><a class="dropdown-item" href="https://github.com/scottplot">GitHub</a></li>
             </ul>
           </div>
