--- a/src/md2html/page.html
+++ b/src/md2html/page.html
@@ -36,6 +36,9 @@
 
           <a class="btn btn-lg menuButton ms-2 text-light" role="button"
             href="https://swharden.com/scottplot/cookbook">Cookbook</a>
+          
+          <a class="btn btn-lg menuButton ms-2 text-light" role="button"
+            href="https://swharden.com/scottplot/demo">Demo</a>
 
           <div class="dropdown d-inline-block">
             <a class="btn btn-lg menuButton ms-2 text-light dropdown-toggle" role="button" id="dropdownMenuLink"
@@ -45,7 +48,6 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/quickstart/">Quickstart</a></li>
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/faq">FAQ</a></li>
-              <li><a class="dropdown-item" href="https://swharden.com/scottplot/demo">Demo</a></li>
               <li><a class="dropdown-item" href="https://swharden.com/scottplot/cookbook">Cookbook/API</a></li>
               <li><a class="dropdown-item" href="https://github.com/scottplot">GitHub</a></li>
             </ul>
